# zoo-keeper-server

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/commands/: add-endpoint.md  add-test.md
.claude/rules/: api-handlers.md  config-parsing.md  session-management.md  streaming.md  testing.md
.github/workflows/: build_and_test.yml  ci.yml
cmake/: Dependencies.cmake  EmbedXxd.cmake  ProjectOptions.cmake
config/: api-key-enabled.json  cpu-only.json  metal.json  server.example.json  sessions-disabled.json
docs/: error-reference.md  openapi.yaml  operational-hardening-plan.md  review-roadmap.md  server-1.0-plan.md  test-ui.md  v0.0.1-release-notes.md  v0.0.1-roadmap.md  zoo-keeper-metal-oom-issue.md  zoo-keeper-server-v1.md
docs/adr/: 001-single-shared-agent.md  002-expected-over-exceptions.md  003-drogon-framework.md  004-optional-sessions.md  005-posix-spawn-for-tools.md
docs/superpowers/plans/: 2026-03-27-zoo-keeper-v1.1.0-migration.md
docs/superpowers/specs/: 2026-03-27-zoo-keeper-v1.1.0-migration-design.md
scripts/: build  format  format-check  test
src/: CMakeLists.txt  link_smoke.cpp  live_smoke.cpp  main.cpp
src/server/: CMakeLists.txt  api_json.cpp  api_json.hpp  api_routes.cpp  api_routes.hpp  api_types.cpp  api_types.hpp  auth.hpp  chat_service.cpp  chat_service.hpp  command_tools.cpp  command_tools.hpp  completion_controller.cpp  completion_controller.hpp  config.cpp  config.hpp  executor.cpp  executor.hpp  health.cpp  health.hpp  http_server.cpp  http_server.hpp  internal_utils.hpp  metrics.cpp  metrics.hpp  result.hpp  route_utils.cpp  route_utils.hpp  runtime.cpp  runtime.hpp  session_manager.cpp  session_manager.hpp  streaming.cpp  streaming.hpp  test_ui.cpp  test_ui.hpp  test_ui.html  test_ui.js  version.hpp.in  zoo_adapter.cpp  (+1 more)
src/server/test_ui_app/: build.mjs  package-lock.json  package.json  tsconfig.json
src/server/test_ui_app/src/: index.html  main.ts  styles.css
tests/: CMakeLists.txt  api_test.cpp  auth_test.cpp  chat_service_test.cpp  command_tools_test.cpp  config_test.cpp  executor_test.cpp  fake_chat_service.hpp  health_test.cpp  http_integration_test.cpp  metrics_test.cpp  release_hygiene.cmake  runtime_test.cpp  server_startup_missing_model.cmake  session_manager_test.cpp  streaming_test.cpp  test_ui_test.cpp  tool_test_helper.cpp  zoo_adapter_test.cpp
tests/fixtures/: server.invalid.missing_model.json
tools/: benchmark.py
